# CME

./: CMakeLists.txt  README.md  install.sh  install_maze_simulator.md  requirements.txt  requirements_rl.txt  setup_env.sh.in
data/: CMakeLists.txt
data/Models/: GameBoard_FinalExport_100x_rearranged.material  GameBoard_FinalExport_100x_rearranged.mesh  GameBoard_FinalExport_100x_rearranged_2.material  GameBoard_FinalExport_100x_rearranged_2.mesh  GameMarble_FinalExport_1xscale.mesh  GameMarble_FinalExport_1xscale_2.material  GameMarble_FinalExport_1xscale_2.mesh  GameMarble_FinalExport_1xscale_2_orig.mesh  MatteOldLace.material  geo_dist.txt  geo_dist_old.txt
data/Models/GameBoard_v6/: GameBoard_v6.3DS  GameMarbleMJC.stl
data/Models/GameBoard_v6/Wall_00/: Wall_00.stl  Wall_00_1.stl  Wall_00_10.stl  Wall_00_11.stl  Wall_00_12.stl  Wall_00_13.stl  Wall_00_14.stl  Wall_00_15.stl  Wall_00_16.stl  Wall_00_17.stl  Wall_00_18.stl  Wall_00_19.stl  Wall_00_2.stl  Wall_00_20.stl  Wall_00_21.stl  Wall_00_22.stl  Wall_00_23.stl  Wall_00_24.stl  Wall_00_25.stl  Wall_00_26.stl  Wall_00_27.stl  Wall_00_28.stl  Wall_00_29.stl  Wall_00_3.stl  Wall_00_30.stl  Wall_00_31.stl  Wall_00_32.stl  Wall_00_33.stl  Wall_00_34.stl  Wall_00_35.stl  Wall_00_36.stl  Wall_00_37.stl  Wall_00_38.stl  Wall_00_39.stl  Wall_00_4.stl  Wall_00_40.stl  Wall_00_41.stl  Wall_00_42.stl  Wall_00_43.stl  Wall_00_44.stl  (+47 more)
data/Models/GameBoard_v6/Wall_10/: Wall_10.stl  Wall_10_1.stl  Wall_10_10.stl  Wall_10_11.stl  Wall_10_12.stl  Wall_10_13.stl  Wall_10_14.stl  Wall_10_15.stl  Wall_10_16.stl  Wall_10_17.stl  Wall_10_18.stl  Wall_10_19.stl  Wall_10_2.stl  Wall_10_20.stl  Wall_10_21.stl  Wall_10_22.stl  Wall_10_23.stl  Wall_10_24.stl  Wall_10_25.stl  Wall_10_26.stl  Wall_10_27.stl  Wall_10_28.stl  Wall_10_29.stl  Wall_10_3.stl  Wall_10_30.stl  Wall_10_31.stl  Wall_10_32.stl  Wall_10_4.stl  Wall_10_5.stl  Wall_10_6.stl  Wall_10_7.stl  Wall_10_8.stl  Wall_10_9.stl
data/Models/GameBoard_v6/Wall_11/: Wall_11.stl  Wall_11_1.stl  Wall_11_10.stl  Wall_11_11.stl  Wall_11_12.stl  Wall_11_13.stl  Wall_11_14.stl  Wall_11_15.stl  Wall_11_16.stl  Wall_11_17.stl  Wall_11_18.stl  Wall_11_19.stl  Wall_11_2.stl  Wall_11_20.stl  Wall_11_21.stl  Wall_11_22.stl  Wall_11_23.stl  Wall_11_24.stl  Wall_11_25.stl  Wall_11_26.stl  Wall_11_27.stl  Wall_11_28.stl  Wall_11_29.stl  Wall_11_3.stl  Wall_11_30.stl  Wall_11_31.stl  Wall_11_32.stl  Wall_11_4.stl  Wall_11_5.stl  Wall_11_6.stl  Wall_11_7.stl  Wall_11_8.stl  Wall_11_9.stl
data/Models/GameBoard_v6/Wall_12/: Wall_12.stl  Wall_12_1.stl  Wall_12_10.stl  Wall_12_11.stl  Wall_12_12.stl  Wall_12_13.stl  Wall_12_14.stl  Wall_12_15.stl  Wall_12_16.stl  Wall_12_17.stl  Wall_12_18.stl  Wall_12_19.stl  Wall_12_2.stl  Wall_12_20.stl  Wall_12_21.stl  Wall_12_22.stl  Wall_12_23.stl  Wall_12_24.stl  Wall_12_25.stl  Wall_12_26.stl  Wall_12_27.stl  Wall_12_28.stl  Wall_12_29.stl  Wall_12_3.stl  Wall_12_30.stl  Wall_12_31.stl  Wall_12_32.stl  Wall_12_4.stl  Wall_12_5.stl  Wall_12_6.stl  Wall_12_7.stl  Wall_12_8.stl  Wall_12_9.stl
data/Models/GameBoard_v6/Wall_13/: Wall_13.stl  Wall_13_1.stl  Wall_13_10.stl  Wall_13_11.stl  Wall_13_12.stl  Wall_13_13.stl  Wall_13_14.stl  Wall_13_15.stl  Wall_13_16.stl  Wall_13_17.stl  Wall_13_18.stl  Wall_13_19.stl  Wall_13_2.stl  Wall_13_20.stl  Wall_13_21.stl  Wall_13_22.stl  Wall_13_23.stl  Wall_13_24.stl  Wall_13_25.stl  Wall_13_26.stl  Wall_13_27.stl  Wall_13_28.stl  Wall_13_29.stl  Wall_13_3.stl  Wall_13_30.stl  Wall_13_31.stl  Wall_13_32.stl  Wall_13_4.stl  Wall_13_5.stl  Wall_13_6.stl  Wall_13_7.stl  Wall_13_8.stl  Wall_13_9.stl
data/Models/GameBoard_v6/Wall_20/: Wall_20.stl  Wall_20_1.stl  Wall_20_10.stl  Wall_20_11.stl  Wall_20_12.stl  Wall_20_13.stl  Wall_20_14.stl  Wall_20_15.stl  Wall_20_16.stl  Wall_20_17.stl  Wall_20_18.stl  Wall_20_19.stl  Wall_20_2.stl  Wall_20_20.stl  Wall_20_21.stl  Wall_20_22.stl  Wall_20_23.stl  Wall_20_24.stl  Wall_20_25.stl  Wall_20_26.stl  Wall_20_27.stl  Wall_20_28.stl  Wall_20_29.stl  Wall_20_3.stl  Wall_20_30.stl  Wall_20_31.stl  Wall_20_32.stl  Wall_20_33.stl  Wall_20_34.stl  Wall_20_35.stl  Wall_20_36.stl  Wall_20_37.stl  Wall_20_38.stl  Wall_20_39.stl  Wall_20_4.stl  Wall_20_40.stl  Wall_20_41.stl  Wall_20_42.stl  Wall_20_43.stl  Wall_20_44.stl  (+9 more)
data/Models/GameBoard_v6/Wall_21/: Wall_21.stl  Wall_21_1.stl  Wall_21_10.stl  Wall_21_11.stl  Wall_21_12.stl  Wall_21_13.stl  Wall_21_14.stl  Wall_21_15.stl  Wall_21_16.stl  Wall_21_17.stl  Wall_21_18.stl  Wall_21_19.stl  Wall_21_2.stl  Wall_21_20.stl  Wall_21_21.stl  Wall_21_22.stl  Wall_21_23.stl  Wall_21_24.stl  Wall_21_25.stl  Wall_21_26.stl  Wall_21_27.stl  Wall_21_28.stl  Wall_21_29.stl  Wall_21_3.stl  Wall_21_30.stl  Wall_21_31.stl  Wall_21_32.stl  Wall_21_33.stl  Wall_21_34.stl  Wall_21_35.stl  Wall_21_36.stl  Wall_21_37.stl  Wall_21_38.stl  Wall_21_39.stl  Wall_21_4.stl  Wall_21_40.stl  Wall_21_41.stl  Wall_21_42.stl  Wall_21_43.stl  Wall_21_44.stl  (+9 more)
data/Models/GameBoard_v6/Wall_22/: Wall_22.stl  Wall_22_1.stl  Wall_22_10.stl  Wall_22_11.stl  Wall_22_12.stl  Wall_22_13.stl  Wall_22_14.stl  Wall_22_15.stl  Wall_22_16.stl  Wall_22_17.stl  Wall_22_18.stl  Wall_22_19.stl  Wall_22_2.stl  Wall_22_20.stl  Wall_22_21.stl  Wall_22_22.stl  Wall_22_23.stl  Wall_22_24.stl  Wall_22_25.stl  Wall_22_26.stl  Wall_22_27.stl  Wall_22_28.stl  Wall_22_29.stl  Wall_22_3.stl  Wall_22_30.stl  (+24 more)
data/templates/Configuration/: config.txt  config_nowall.txt  config_perf.txt  config_theta.txt  maze_wall_configuration.txt  plugins.cfg  plugins_d.cfg  plugins_d_win.cfg  plugins_win.cfg  resources.cfg  resources_d.cfg  resources_d_win.cfg  resources_win.cfg
experiments/: CMakeLists.txt  __init__.py  simulation.py  task_manager.py  utils.py
experiments/exp_ilqr/: README.md  run_ilqr.py  run_mpc.py
experiments/rl/: README.md  env_wrap_rl.py  make_compare_graph.py  run_all.py  run_sac.py  trainer.py
experiments/settings/: config_theta.txt  config_theta_less_friction.txt  config_theta_less_friction_nowarm.txt  config_theta_nowarm.txt  config_xyz_less_friction.txt  config_xyz_rotationYes.txt
(+489 files in other folders)
